<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/copy"
        android:orderInCategory="1"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy" />
    <item
        android:id="@+id/bookmark"
        android:orderInCategory="2"
        android:title="@string/bookmarked_ayah"
        android:icon="@drawable/ic_bookmark" />
    <item
        android:id="@+id/fbshare"
        android:orderInCategory="3"
        android:title="@string/fb_share"
        android:icon="@drawable/ic_facebookshare" />
    <item
        android:id="@+id/saveayah"
        android:orderInCategory="4"
        android:title="@string/save_ayah"
        android:icon="@drawable/ic_save" />
</menu>