<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/imghomescreen"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="10"
        android:focusableInTouchMode="true">


        <!--<SearchView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_weight="8"
        app:columnCount="1"
        app:rowCount="3"
        app:alignmentMode="alignMargins"
        app:columnOrderPreserved="false"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!-- column 1 -->
        <!-- row 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/readQuran"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="79dp"
                    android:layout_gravity="center_vertical"
                    android:saveEnabled="false"
                    android:contentDescription="Lexo Kuran"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imglexokuranin" />

                <TextView
                    android:id="@+id/readQuranCardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/read_quran_cardview_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- column 2 -->
        <!-- row 1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/ayahBookmark"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_rowWeight="1"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="79dp"
                    android:layout_gravity="center_horizontal"
                    android:saveEnabled="false"
                    android:contentDescription="Ajeti i mbetur"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgkuranmbetur" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookmarked_ayah"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- column 1 -->
        <!-- row 2 -->
        <android.support.v7.widget.CardView
            android:id="@+id/ayasSavings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_rowWeight="1"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="79dp"
                    android:layout_gravity="center_horizontal"
                    android:saveEnabled="false"
                    android:contentDescription="Ruajtjet"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgruajtjet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_ayas"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- column 2 -->
        <!-- row 2 -->
        <!--
        <android.support.v7.widget.CardView
            android:id="@+id/imageGen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:saveEnabled="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgscience" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/image"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>-->

        <!-- column 1 -->
        <!-- row 3 -->
        <!--
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_rowWeight="1"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:saveEnabled="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgscience" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/science"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>-->

        <!-- column 2 -->
        <!-- row 3 -->
        <!--
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_rowWeight="1"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:saveEnabled="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgstatistika" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_options"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>-->

    </android.support.v7.widget.GridLayout>
</LinearLayout>